# jackie-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/jackie_utils/: __init__.py  file_utils.py  math_utils.py
tests/: test_file_utils.py  test_math_utils.py
